# LLMsCourse

./: .gitignore  .pre-commit-config.yaml  20260117_Script to Normalize Recipes & Create JSON File.py  CLAUDE.md  HW2_NOTES.md  README.md  SW_EpisodeIV_VI.json  Script to Normalize Recipes & Create JSON File.py  hw4_gpu_run.py  pyproject.toml  run_tokenizer.py
.github/workflows/: ci.yml
scripts/: train_wordpiece_starwars.py
src/: dataloader.py  evaluator.py  shinynewtokenizer.py  tokenizer.py  trainer.py
tests/: test_dataloader.py  test_evaluator.py  test_tokenizer.py  test_tokenizer_wordpiece.py  test_trainer.py
