[project]
name = "meal-planner"
version = "0.1.0"
description = "AI Agent to help with meal planning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]


[tool.coverage.report]
fail_under = 80
